--- a/lunarlander.html
+++ b/lunarlander.html
@@ -2,10 +2,12 @@
 <html>
 
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" media='screen and (min-width: 720px)' href='css/lunar.css'>
 	<link rel="stylesheet" media='screen and (max-width: 720px)' href='css/mlunar.css'>
-</head>
-
+<title>LunarLander</title>
+	</head>
 <body>
 	<div class="a"><ul id="cpanel"  >
 			<ul>Velocidad<span id="Velocidad"><br/>115</span>m/s</ul><br/><br/>
